src/test/deca/context/invalid/created/binary_exp/op_comp/gt_boolean_boolean.deca
// Description :
//    test gt entre un boolean et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Opérandes de type boolean, boolean, attendu: ‘int’ ou ‘float’

{
boolean a;
boolean b;
boolean c = a > b;
}
